--- a/s5sass_mediaqueries/css/style.scss
+++ b/s5sass_mediaqueries/css/style.scss
@@ -106,3 +106,9 @@ body{
         }
     }
 }
+
+/*
+- a partir de 768px, sólo se vean la 1a y la 3er card
+- en desktop, el body debe tener fondo blanco
+- para tablet, las cards deberían aparecer de forma horizontal dentro del contenedor
+- en desktop, se debe de invertir el orden de las cards*/
