--- a/p1bootstrap_layouts/css/sytle.scss
+++ b/p1bootstrap_layouts/css/sytle.scss
@@ -1,3 +1,60 @@
+@mixin custom-border-color($color, $size){
+    border-top:$size solid $color
+}
+
+@mixin dynamic-justify-flex($position){
+    justify-content: $position;
+}
+
+@mixin heading-styles($font-size,$color){
+    font-size:$font-size;
+    color:$color;
+}
+
+h1{
+    @include heading-styles(2rem,#333 )
+}
+
+.card{
+    h1{
+        @include heading-styles(1rem, #777 )
+    }
+}
+
+@mixin dynamic-bg-card($bg-color,$width){
+    border:1px solid #acacac;
+    border-radius:10px;
+    padding:1.5rem;
+    background-color:$bg-color;
+    width:$width;
+}
+
+.card-blue{
+    @include dynamic-bg-card(blue, 10% )
+}
+
+.card-red{
+    @include dynamic-bg-card(red, 30% )
+}
+
+
+
+
+.card-blue
+
+.some-card{
+    width:20%;
+    height:200px;
+    @include custom-border-color(peru,2px );
+    @include dynamic-justify-flex(flex-end)
+}
+
+.some-other-card{
+    @include custom-border-color(navy, 10px);
+    @include dynamic-justify-flex(flex-start)
+}
+
+
 .bg-{
     &cyan{
         background-color:cyan;
