--- a/petAdoption/views/pets.html
+++ b/petAdoption/views/pets.html
@@ -1,1 +1,7 @@
-<h1>Pets</h1>
+<form action="" class="p-3 bg-dark text-white pet-form">
+    <h1>Guardar mascota</h1>
+    <div class="form-group"><label for="">Nombre</label><input type="text" class="form-control" name="name"></div>
+    <div class="form-group"><label for="">Descripción</label><input type="text" class="form-control" name="description"></div>
+    <div class="form-group"><label for="">Foto</label><input type="text" class="form-control" name="picture"></div>
+    <button type="button" class="btn btn-success save-pet">Guardar Mascota</button>
+</form>
