--- a/petAdoption/views/users.html
+++ b/petAdoption/views/users.html
@@ -1,3 +1,6 @@
-<h1>Users</h1>
-
-<button type="button" class="btn btn-success add-user">Agregar Usuario</button>
+<form action="" class="p-3 bg-dark text-white user-form">
+    <h1>Guardar usuario</h1>
+    <div class="form-group"><label for="">Nombre</label><input type="text" class="form-control" name="name"></div>
+    <div class="form-group"><label for="">Foto</label><input type="text" class="form-control" name="picture"></div>
+    <button type="button" class="btn btn-success save-user">Guardar Usuario</button>
+</form>
